[package]
name = "llama-rs-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hf-hub = "0.4.2"
llama-cpp-2 = { version = "0.1.101" }
tracing = "0.1"
tracing-subscriber = "0.3"
encoding_rs = "0.8"
rustyline = "15.0"                                # For interactive terminal input
